[fix] modal was unreadable

--- a/pinry/static/css/pinry.css
+++ b/pinry/static/css/pinry.css
@@ -388,6 +388,7 @@ body {
 
 .modal-content {
     border-radius: 0px;
+    color: #111;
 }
 
 .modal-header {
